--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     .ad-container {
       margin: 20px auto;
       text-align: center;
-      max-width: 320px; /* ajustado al ancho del banner */
+      max-width: 320px;
     }
     footer {
       margin-top: 50px;
@@ -88,11 +88,7 @@
 
   <h1>Watch Exclusive Adult Video Online in Full HD - Free Streaming</h1>
 
-  <video src="https://files.catbox.moe/wppn9a.mp4" autoplay muted controls playsinline preload="auto" poster="https://yourdomain.com/thumbnail.jpg" ></video>
-
-  <a class="cta-button" href="https://www.profitableratecpm.com/ce6ivccs53?key=4f6f1c61682bd4534e2d2f24c191fdd4" target="_blank" rel="noopener noreferrer">🔞 Unlock Full Video Access Now</a>
-
-  <!-- Banner colocado justo debajo del botón para máxima visibilidad -->
+  <!-- 🔸 Banner Adsterra colocado justo encima del video -->
   <div class="ad-container">
     <!-- Adsterra Banner -->
     <script type="text/javascript">
@@ -106,6 +102,10 @@
     </script>
     <script type="text/javascript" src="//www.highperformanceformat.com/cfe6fc7c68e3318c0e552c6c6312c209/invoke.js"></script>
   </div>
+
+  <video src="https://files.catbox.moe/wppn9a.mp4" autoplay muted controls playsinline preload="auto" poster="https://yourdomain.com/thumbnail.jpg" ></video>
+
+  <a class="cta-button" href="https://www.profitableratecpm.com/ce6ivccs53?key=4f6f1c61682bd4534e2d2f24c191fdd4" target="_blank" rel="noopener noreferrer">🔞 Unlock Full Video Access Now</a>
 
   <section>
     <h2>Why Watch Our Exclusive Adult Video?</h2>
@@ -153,8 +153,11 @@
   <!-- Social Bar Adsterra -->
   <script type='text/javascript' src='//pl26870440.profitableratecpm.com/de/fe/20/defe20cc99b911d434f425091e53a0e7.js'></script>
 
-  <!-- Push Notification Script (example: Adsterra or Propeller) -->
+  <!-- Push Notification Script -->
   <script src="https://push-sdk.com/pfe/current/tag.min.js?z=REPLACE_WITH_YOUR_ID" data-cfasync="false" async></script>
+
+  <!-- ✅ Popunder Script al final del body -->
+  <script type='text/javascript' src='//pl26871093.profitableratecpm.com/4d/8b/ee/4d8bee2691dd6843a2afcd1ea03008d2.js'></script>
 
   <footer>
     &copy; 2025 Adult Exclusive Video Streaming. All rights reserved.
