--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     justify-content: center;
     align-items: center;
     transition: background-color 0.3s ease;
+    animation: pulse 2s infinite;
   }
   #playButton:hover, #playButton:focus {
     background: rgba(255, 255, 255, 1);
@@ -72,6 +73,18 @@
     border-radius: 12px;
     margin-top: 20px;
     flex-shrink: 0;
+  }
+
+  /* Animación latido */
+  @keyframes pulse {
+    0%, 100% {
+      transform: scale(1);
+      box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.7);
+    }
+    50% {
+      transform: scale(1.1);
+      box-shadow: 0 0 15px 10px rgba(255, 255, 255, 0.4);
+    }
   }
 
   /* Móvil: que el body ocupe mínimo toda la altura y el contenido quede centrado verticalmente */
@@ -118,7 +131,6 @@
       videoContainer.style.display = 'none';
       video.style.display = 'block';
       video.play();
-      // Para accesibilidad, poner foco en el video
       video.focus();
     }
   });
