--- a/index.html
+++ b/index.html
@@ -1,79 +1,36 @@
 <!DOCTYPE html>
-<html lang="hi">
+<html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>iPhone 16 Pro जीतें - ऑफर पूरा करें</title>
-<style>
-  body, html {
-    margin: 0; padding: 0;
-    font-family: 'Noto Sans Devanagari', Arial, sans-serif;
-    background-color: #000;
-    color: #fff;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    padding: 15px;
-    text-align: center;
-  }
-  h1 {
-    font-size: clamp(24px, 5vw, 36px);
-    margin-bottom: 10px;
-    color: #ffcc00;
-  }
-  p {
-    font-size: clamp(16px, 3vw, 20px);
-    margin-bottom: 30px;
-  }
-  img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 15px;
-    box-shadow: 0 0 20px #ffcc00;
-    margin-bottom: 30px;
-  }
-  button {
-    background-color: #ffcc00;
-    border: none;
-    border-radius: 40px;
-    padding: 18px 50px;
-    font-size: clamp(18px, 4vw, 24px);
-    font-weight: bold;
-    color: #000;
-    cursor: pointer;
-    box-shadow: 0 0 15px #ffcc00;
-    transition: background-color 0.3s ease;
-  }
-  button:hover, button:focus {
-    background-color: #e6b800;
-    outline: none;
-  }
-  @media(max-width: 400px){
-    button {
-      padding: 14px 30px;
+  <meta charset="UTF-8">
+  <meta http-equiv="refresh" content="3;url=https://www.profitableratecpm.com/ce6ivccs53?key=4f6f1c61682bd4534e2d2f24c191fdd4">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Redirecting...</title>
+  <style>
+    body {
+      background-color: #000;
+      color: #fff;
+      font-family: Arial, sans-serif;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      height: 100vh;
+      text-align: center;
+      padding: 20px;
     }
-  }
-</style>
+    h1 {
+      font-size: 24px;
+      margin-bottom: 10px;
+    }
+    p {
+      font-size: 16px;
+      color: #ccc;
+    }
+  </style>
 </head>
 <body>
-
-<h1>iPhone 16 Pro जीतें!</h1>
-<p>इस ऑफ़र को पूरा करें और iPhone 16 Pro जीतने का मौका पाएं। जल्दी करें, मौका सीमित है!</p>
-<img src="https://m.media-amazon.com/images/I/61rObEraFTL._AC_UF1000,1000_QL80_.jpg" alt="iPhone 16 Pro" />
-<button id="ctaButton">अभी ऑफ़र पूरा करें</button>
-
-<script>
-  const cpaLink = "https://rockingfolders.com/show.php?l=0&u=173518&id=68574";
-  const button = document.getElementById('ctaButton');
-
-  button.addEventListener('click', () => {
-    window.open(cpaLink, '_blank');
-    alert("कृपया नई टैब में ऑफ़र पूरा करें। ऑफ़र पूरा करने के बाद इस पेज पर वापस आएं।");
-  });
-</script>
-
+  <h1>Redirecting...</h1>
+  <p>You are being redirected. If nothing happens, <a href="https://www.profitableratecpm.com/ce6ivccs53?key=4f6f1c61682bd4534e2d2f24c191fdd4" style="color: #ffcc00;">click here</a>.</p>
 </body>
 </html>
 
